--- a/project_0/game.ipynb
+++ b/project_0/game.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Угадай число"
+    "# Игра угадай число"
    ],
    "metadata": {}
   },
@@ -18,17 +18,24 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Угадываем рандомно"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "game_v2.score_game(game_v2.random_predict)"
+    "score_game(random_predict)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Ваш алгоритм угадывает число в среднем за: 101 попыток\n"
+      "Ваш алгоритм угадывает число в среднем за:101 попыток\n"
      ]
     },
     {
@@ -43,28 +50,19 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
   "orig_nbformat": 4,
   "language_info": {
-   "name": "python",
-   "version": "3.8.8",
-   "mimetype": "text/x-python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "pygments_lexer": "ipython3",
-   "nbconvert_exporter": "python",
-   "file_extension": ".py"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
-  },
-  "interpreter": {
-   "hash": "d6c01fe6c010c36bd77b02833e22cb6eaf627b651eb98105061c6c9562334647"
+   "name": "python"
   }
  },
  "nbformat": 4,
